fix: collapsed side menu in dark mod

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -134,7 +134,7 @@ a.@{prefix}-menu__item {
     }
 
     li + li {
-      margin-top: 4px;
+      margin-top: @comp-margin-xxs;
       margin-left: 0;
     }
   }
@@ -314,8 +314,7 @@ a.@{prefix}-menu__item {
     .@{prefix}-menu-group {
       &__title {
         position: relative;
-        padding: 20px 16px 8px;
-        height: 48px;
+        padding: @comp-paddingTB-l @comp-paddingLR-l @comp-paddingTB-xs @comp-paddingLR-l;
         color: @menu-menu-group-title-color;
         font: @menu-extra-font-size;
         box-sizing: border-box;
@@ -377,11 +376,6 @@ a.@{prefix}-menu__item {
     }
   }
 
-  .@{prefix}-menu__popup {
-    top: 0;
-    left: calc(100% + @comp-paddingLR-s);
-  }
-
   .@{prefix}-menu__item {
     position: relative;
     margin: @comp-margin-xs 0;
@@ -424,9 +418,18 @@ a.@{prefix}-menu__item {
 
     &:hover:not(.@{prefix}-is-active):not(.@{prefix}-is-disabled) {
       background: @menu-light-active-bg;
+    }
+  }
 
-      & + .@{prefix}-menu__item {
-        margin-top: @comp-margin-xs;
+  .@{prefix}-menu__popup {
+    top: 0;
+    left: calc(100% + @pop-padding-m);
+
+    .@{prefix}-menu__item, .@{prefix}-submenu {
+      margin: @comp-margin-xxs 0 0 0;
+
+      &:first-child {
+        margin-top: 0;
       }
     }
   }
@@ -461,12 +464,7 @@ a.@{prefix}-menu__item {
       }
 
       &.@{prefix}-is-opened.@{prefix}-is-active {
-        background-color: @default-menu-active-color--dark;
-        color: @menu-item-active-color--dark;
-
-        .t-icon {
-          color: @menu-item-active-color--dark;
-        }
+        background-color: transparent;
       }
     }
 
@@ -488,8 +486,22 @@ a.@{prefix}-menu__item {
       color: @menu-menu-group-title-color--dark;
     }
 
-    &.@{prefix}-is-collapsed .@{prefix}-menu-group__title:after {
-      background-color: @menu-group-title-bg--collapse--dark;
+    &.@{prefix}-is-collapsed {
+      .@{prefix}-menu-group__title:after {
+        background-color: @menu-group-title-bg--collapse--dark;
+      }
+
+      .@{prefix}-menu__item {
+
+        &.@{prefix}-is-active.@{prefix}-is-opened {
+          background-color: @default-menu-active-color--dark;
+          color: @menu-item-active-color--dark;
+
+          .t-icon {
+            color: @menu-item-active-color--dark;
+          }
+        }
+      }
     }
   }
 }
@@ -733,6 +745,11 @@ a.@{prefix}-menu__item {
     opacity: 0;
     .list-style-none();
 
+    // 超过 2 级的弹出菜单，不需要动画
+    .@{prefix}-menu__popup {
+      transition: none;
+    }
+
     &-wrapper {
       padding: @pop-padding-m;
       height: 100%;
@@ -777,8 +794,8 @@ a.@{prefix}-menu__item {
       overflow: visible;
 
       .@{prefix}-menu__popup {
-        top: 0;
-        left: calc(100% - 6px);
+        top: calc(0px - @pop-padding-m);
+        left: 100%;
 
         &::before {
           content: "";
